<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josechavez.aplicacionconsulta.view.CrearEmpresa"
    android:screenOrientation="portrait"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:id="@+id/linearLayout">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="104dp"
            android:layout_margin="15dp"
            android:layout_height="104dp"
            android:src="@drawable/profile" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNameEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreempresa" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnCiudad"
            android:layout_width="300dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"

            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/datosContacto"
            android:textStyle="bold" />

        <Space
            android:layout_width="300dp"
            android:layout_height="10dp"
                       />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtDueño"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombrecontacto" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <RadioGroup
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:checkedButton="@+id/man"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkboxHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sexHombre" />

            <RadioButton
                android:id="@+id/checkboxMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SexMujer" />
        </RadioGroup>
        <Space
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEmailEmpresa"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/txtPasswordEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña" />
        </android.support.design.widget.TextInputLayout>
        <Space
            android:layout_width="300dp"
            android:layout_height="5dp"
            />

        <Button
            android:id="@+id/CrearUsuario"
            android:background="@drawable/borde_redondo"
            android:textColor="@color/editTextColorWhite"
            android:layout_width="300dp"
            android:onClick="Crear"
            android:layout_height="wrap_content"
            android:text="@string/singup"
            />
        <Space
            android:layout_width="300dp"
            android:layout_height="10dp"
            />
        <TextView
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminos"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="300dp"
            android:layout_height="10dp"
            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>