<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josechavez.aplicacionconsulta.fragment.TabsCrearClienteFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:id="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNombreC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColor="@color/editTextColorBlack"
                />
        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtApellidoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido"
                     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCedulaC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cedula"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtTelefonoC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="number"
                     />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                >

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cedulaVali"

                    android:text="TextView" />

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borde_redondo"
                    android:text="@string/crearCliente"
                    android:textColor="@color/editTextColorWhite"

                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</FrameLayout>
